--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <button class="start">start</button>
     <button class="stop" disabled="true">stop</button>
-    <!-- <input class="number" type="number" name="" id="" value="3000" /> -->
+    <input class="number" type="number" name="" id="" value="3000" />
     <div class="circle static"></div>
     <script src="./index.js"></script>
     <script src="./webrtc.js"></script>
